--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,9 @@
 Change log file for PSP-Maps
 
+version 2.4.1.0	(2015-01-11)
+	* Replaced KML with JSON for Google Maps API V3.
+	* added support for offline OSM_tile format import/export
+
 version 2.3.0.0	(2013-01-17)
 	* added support for cmake build system
 	* updated urls.txt for Google Maps
